package com.example.schema;

/**
 * Standalone book element
 * Generated from XSD schema
 */
public class Book {

    public Book() {
    }

}