package com.example.schema;

/**
 * Root element representing a bookstore
 * Generated from XSD schema
 */
public class Bookstore {

    public Bookstore() {
    }

}